moved hero items into flex container to prevent social media icons from moving below page in landscape view on mobile devices

--- a/static/css/mystyles.css
+++ b/static/css/mystyles.css
@@ -81,7 +81,7 @@ svg {
   }
 }
 
-@media (max-height: 400px) {
+@media (max-height: 350px) {
   .animation-1 {
     color: white;
   }
